<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rc_car</name>
  <version>0.0.0</version>
  <description>ROS_GAZEBO Integrated Project</description>
  <maintainer email="ashish@nextaisense.com">abc</maintainer>
  <license>Apache-2.0</license>

  <!-- Addition of the dependencies -->
  <depend>rclpy</depend>
  <depend>service_test</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>

  <depend>rc_car_interfaces</depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>robot_localization</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
