<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rc_car_description</name>
  <version>0.0.0</version>
  <description>Contains meshes, urdf and robot state publisher node</description>
  <maintainer email="zahid@nextaisense.com">zahid</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- URDF / Xacro -->
  <build_depend>xacro</build_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Robot model -->
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- TF (runtime only, for consumers) -->
  <exec_depend>tf2_ros</exec_depend>

  <!-- Optional but recommended -->
  <exec_depend>joint_state_publisher</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
